backup-restore/recipes/Maximo/2.9.x/suite/README.md
MAS Suite Backup and Restore Overview
----

This is an enhanced version of the recipe to protect Maximo Application Suite. Since MAS is deployed accross several namespaces, the initial approach was to backup and restore each namespace individually. With this recipe, the following namespaces will be covered with just one recipe: `mongodb`, `sls` and `core`. 
The backup and restore flow is the same as backing up individually each application, however, now the only application that needs to be protected is `core` namespace, the recipe will take care of protecting the licensing service and the Mongo DB. 

Before restoring, make sure to restore any other dependencies in the prerequisite section. After restoring, you will need to restore other Maximo applications such as Manage or Optimizer with its individual recipe. 

Backup
----
For detailed information about IBM Fusion resources such as backup policy, recipes and backup storage location, please refer the [Backing up and restoring with IBM Fusion](https://www.ibm.com/docs/en/masv-and-l/continuous-delivery?topic=suite-backing-up-restoring-storage-fusion#taskt_backing_up_and_restoring_with_ibm_fusion__steps__1) section in MAS documentation <br>

### Steps for Maximo Core namespace backup

1. cd to `maximo/suite`
2. Export Suite required variables, this can be achieving by sourcing the `maximo_env.sh`:
    ```
    MAS_INSTANCE_ID (REQUIRED)
    MONGODB_NAMESPACE (REQUIRED, default: mongoce)
    SLS_NAMESPACE (REQUIRED, default: ibm-sls)
    REPORTING_OPERATOR (OPTIONAL, default: dro)
    REPORTING_OPERATOR_NAMESPACE (OPTIONAL, default: redhat-marketplace)
    KAFKA_NAMESPACE (OPTIONAL if installed in cluster)
    ```

    e.g
    `export MAS_INSTANCE_ID=inst1`


3. Run the prerequisite script, for more information, run with the `-h` option

    `./scripts/backup-pre-req.sh`

4. Apply the local recipe (frcpe) generated by the backup-pre-req script
   
    `oc apply -f maximo-suite-backup-restore-local.yaml`

**Note:** Following steps needs to be made on Hub cluster

5. From Fusion Console, create backup policy (fbp) specifying the frequency for backups
6. From Fusion Console, associate the backup policy to the Core application. 

**Note:** Only assign the policy to Core namespace, don't assign it to MongoDB or SLS namespaces

7.  Retrieve the Policy Assignment Name:

    `oc get fpa -n ibm-spectrum-fusion-ns -o custom-columns=NAME:.metadata.name --no-headers`
8.  Update policy assignments (fpa) with recipe name and namespace

    `oc -n ibm-spectrum-fusion-ns patch fpa <policy-assignment-name> --type merge -p '{"spec":{"recipe":{"name":"maximo-suite-backup-restore-recipe", "namespace":"ibm-spectrum-fusion-ns"}}}'`
    ```
    recipe:
        name: maximo-suite-backup-restore-recipe
        namespace: ibm-spectrum-fusion-ns
    ```

Restore
----
### Prerequisites:
**Required:** <br>
1. RH [cert-manager](https://ibm-mas.github.io/ansible-devops/roles/cert_manager/) <br>
2. Maximo [ibm-operator-catalog](https://ibm-mas.github.io/ansible-devops/roles/ibm_catalogs/) <br>
3. Data Reporter Operator [(dro)](https://ibm-mas.github.io/ansible-devops/roles/dro/)  <br>

**Optional:** <br>
4. [Grafana](https://ibm-mas.github.io/ansible-devops/roles/grafana/): You must install same version (v4 or v5) as in source cluster if you were previously using Grafana <br>
5. Restore [DB2](../db2u/README.md) namespace if configured in source cluster <br>
6. Restore [AMQ-Streams](../amq-streams/README.md) namespace if configured in source cluster


### Steps for Maximo Suite namespace restore
1. Before restoring application run the prerequisite script:

    `./scripts/restore-pre-req.sh`
2. Start Core namespace restore to same or alternate cluster. Before restoring Core namespace, the recipe will take care of restoring the MongoDB and SLS namespaces automatically.
For detailed procedure on how to restore an application with IBM Fusion, please refer to detailed steps in [Restoring Maximo Application Suite with IBM Fusion](https://www.ibm.com/docs/en/masv-and-l/continuous-delivery?topic=suite-backing-up-restoring-storage-fusion#restore_mas_w_fusion__title__1)
